--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <a href="#">Contact</a>
     <a href="#">Sign In</a>
   </nav>
+  <img src="img/main-header.png" />
  </div>
 
   <div class="container home">
