Add navbar background

--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
 <body>
 
  <!-- navigation code here -->
- <div class="navigation">
-  <h1>SpaceWalkers</h1>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">About Us</a>
-    <a href="#">Blog</a>
-    <a href="#">Contact</a>
-    <a href="#">Sign In</a>
-  </nav>
-  <img src="img/main-header.png" />
+ <div class="nav-area">
+  <div class="outer-navbar">
+    <div class="navigation">
+      <h1>SpaceWalkers</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="#">Sign In</a>
+      </nav>
+    </div>
+  </div>
+  <img class="main-header-img" src="img/main-header.png" />
  </div>
-
   <div class="container home">
 
     <header class="intro">
